No need to use SNAPSHOTS in this case

--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -43,8 +43,8 @@ jobs:
         REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
         RELEASE_VERSION: $(cat RELEASE_VERSION)
       run: |
-        mvn --batch-mode release:prepare -Dusername=$GITHUB_ACTOR -Dpassword=$GITHUB_TOKEN -DignoreSnapshots=true
-        mvn --batch-mode release:perform -DignoreSnapshots=true
+        mvn --batch-mode release:prepare -Dusername=$GITHUB_ACTOR -Dpassword=$GITHUB_TOKEN
+        mvn --batch-mode release:perform
       
     - name: Create Release
       id: create_release
